--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         </div>
         <button id="create-slider" class="btn btn-primary px-5">Create slider</button>
       </div>
+      <h2 id="errorMessage"></h2>
       <!-- spinner -->
       <div class="d-flex justify-content-center">
         <div id="loadingSpinner" class="spinner-border text-info d-none" role="status">
